feat(UtterancComments): added utteranc for github comments

--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -7,65 +7,70 @@
   }
 }
 
-.post {
-  margin-top: 80px;
+.postContainer {
+  display: flex;
+  flex-direction: column;
 
-  h1 {
-    font-size: 48px;
-    font-weight: 700;
-  }
+  .post {
+    margin-top: 80px;
 
-  .postData {
-    display: flex;
-    align-items: center;
-    margin-top: 25px;
+    h1 {
+      font-size: 48px;
+      font-weight: 700;
+    }
 
-    p {
+    .postData {
       display: flex;
       align-items: center;
+      margin-top: 25px;
 
-      svg {
-        margin-right: 8px;
-      }
+      p {
+        display: flex;
+        align-items: center;
 
-      &:not(:first-child) {
-        margin-left: 28px;
+        svg {
+          margin-right: 8px;
+        }
+
+        &:not(:first-child) {
+          margin-left: 28px;
+        }
       }
     }
-  }
 
-  .postContent {
-    margin-top: 64px;
+    .postContent {
+      margin-top: 64px;
 
-    h2 {
-      margin-bottom: 36px;
-      font-size: 36px;
-    }
+      h2 {
+        margin-bottom: 36px;
+        font-size: 36px;
+      }
 
-    p {
-      font-size: 18px;
-      text-align: justify;
-      margin-top: 24px;
+      p {
+        font-size: 18px;
+        text-align: justify;
+        margin-top: 24px;
 
-      a {
-        color: var(--highlight);
+        a {
+          color: var(--highlight);
 
-        &:hover {
-          text-decoration: underline;
+          &:hover {
+            text-decoration: underline;
+          }
+        }
+
+        strong {
+          font-weight: 700;
+        }
+
+        em {
+          font-style: italic;
         }
       }
 
-      strong {
-        font-weight: 700;
+      li {
+        margin-top: 24px;
       }
-
-      em {
-        font-style: italic;
-      }
-    }
-
-    li {
-      margin-top: 24px;
     }
   }
 }
