--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -38,6 +38,13 @@
       }
     }
 
+    .editedAt {
+      display: block;
+      font-style: italic;
+      font-size: 14px;
+      margin-top: 16px;
+    }
+
     .postContent {
       margin-top: 64px;
 
